Made pages more responsive

--- a/boston.html
+++ b/boston.html
@@ -75,6 +75,7 @@
     <h1 class="story-headline">Hidden Boston</h1>
 
     <div class="story">
+      <br />
       <p>
         One of the oldest cities in the United States, Boston features
         attractive architecture and many offbeat attractions. We visit three of
@@ -124,7 +125,7 @@
 
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6">
+          <div class="col-lg-6 column-story">
             <h2 class="article-subhead">Downtown</h2>
             <br />
             <p>
@@ -149,7 +150,7 @@
             </p>
           </div>
 
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <img
               src="/photos/downtownboston.jpg"
               class="img-fluid story-pic"
@@ -216,11 +217,12 @@
         US$645 Yeezy boots. Also find curated streetwear by brands like Raised
         by Wolves.
       </p>
+      <h2 class="article-subhead">Cambridge</h2>
+      <br />
 
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6 mb-5">
-            <h2 class="article-subhead">Cambridge</h2>
+          <div class="col-lg-6 mb-5">
             <img
               src="/photos/mit.jpg"
               alt="MIT's State Center"
@@ -228,7 +230,7 @@
               class="img-fluid story-pic"
             />
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6 column-story">
             <p>
               Across the Charles River from Boston, the 18-square-kilometre city
               of Cambridge is a hub of innovation fed not only by Harvard
