--- a/disney.html
+++ b/disney.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Mouse+Memoirs&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -72,9 +72,10 @@
         title="Disney photo by Brian McGowan"
       />
     </div>
-    <h1 class="story-headline">Keys to the Kingdom</h1>
+    <h1 class="disney-headline">Keys to the Kingdom</h1>
 
     <div class="story">
+      <br />
       <p>
         “Where am I going to put my earring?” my mom asks, removing it to insert
         her earpiece.
@@ -102,9 +103,10 @@
       </p>
 
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Meet me down on Main Street</h3>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <h2 class="disney-headline">M</h2>
+            <h2 class="article-subhead d-inline">eet me down on Main Street</h2>
             <br />
             <p>
               The day begins at 9 a.m. in the 1900s-style City Hall on Main
@@ -122,7 +124,7 @@
               causes the street to appear shorter on the way out.
             </p>
           </div>
-          <div class="col-md-6 mt-3">
+          <div class="col-lg-6">
             <img
               src="/photos/mainstreet.jpg"
               alt="Main Street USA in Disney's Magic
@@ -133,6 +135,7 @@
           </div>
         </div>
       </div>
+      <br />
       <p>
         Main Street is lined with gas lamps, pastel-coloured shops, bakeries,
         restaurants and even a working barbershop. Throughout the day,
@@ -161,7 +164,8 @@
         If MK were a movie, Main Street U.S.A. would act as its opening credits.
       </p>
 
-      <h3>Into the jungle</h3>
+      <h2 class="disney-headline">I</h2>
+      <h2 class="article-subhead d-inline">nto the jungle</h2>
       <br />
       <p>
         Main Street’s piano sounds are replaced with that of conga drums as we
@@ -188,7 +192,7 @@
         plants and a chanting tribesman who proclaims his love for disco.
       </p>
 
-      <h3>Cape Cod cookery</h3>
+      <h2 class="disney-headline">C<h2 class="article-subhead d-inline">ape Cod cookery</h2>
       <br />
       <p>
         Back on dry land, Adventureland fades into the log cabins and Old West
@@ -229,9 +233,11 @@
         Her eyes shine when she talks about Walt; Disney is definitely not just
         for kids.
       </p>
+     <h2 class="disney-headline">K</h2> <h2 class="article-subhead d-inline">ingdom come</h2>
+      <br />
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 mt-5">
+        <div class="row align-items-center">
+          <div class="col-lg-6">
             <img
               src="/photos/hauntedmansion.jpg"
               class="img-fluid"
@@ -239,8 +245,7 @@
               title="Haunted Mansion photo by Brian McGowan"
             />
           </div>
-          <div class="col-md-6">
-            <h3>Kingdom come</h3>
+          <div class="col-lg-6">
             <br />
             <p>
               The Haunted Mansion. The first time I saw the Spanish
@@ -278,7 +283,7 @@
         shape of mouse ears.
       </p>
 
-      <h3>Ears to the ground</h3>
+      <h2 class="disney-headline">E</h2><h2 class="article-subhead d-inline">ars to the ground</h2>
 
       <p>
         It’s true: the Magic Kingdom has tunnels. To get to them, Claire leads
@@ -299,7 +304,7 @@
         pin-replenishing station and some photo displays of the park’s retired
         attractions.
       </p>
-      <h3>Youth eternal</h3>
+    <h2 class="disney-headline">Y</h2><h2 class="article-subhead d-inline">outh eternal</h2>
 
       <p>
         The tour ends back at City Hall. Over the course of five hours we’ve
