--- a/belfast.html
+++ b/belfast.html
@@ -77,6 +77,7 @@
     <h1 class="story-headline">Three Days in Belfast</h1>
 
     <div class="story">
+      <br />
       <p>
         Situated in the Emerald Isle’s northeast—just a two-hour drive from
         Dublin—Belfast is transforming itself into a must-visit destination.
@@ -87,7 +88,7 @@
         locals say, craic.
       </p>
 
-      <h3>Day 1</h3>
+      <h2 class="article-subhead">Day 1</h2>
       <br />
       <p>
         Morning: Start your day by exploring the Titanic Quarter, a former
@@ -108,9 +109,9 @@
       </p>
 
       <div class="container">
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Day 2</h3>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <h2 class="article-subhead">Day 2</h2>
             <br />
             <p>
               Morning: Take McComb’s Coach Travel’s full-day Game of Thrones bus
@@ -133,19 +134,18 @@
               Ulster Hall.
             </p>
           </div>
-          <div class="col-md-6 story-pic">
+          <div class="col-lg-6">
             <img
               src="/photos/belfastart.jpg"
               class="img-fluid"
               alt="Belfast street art"
-              title="Belfast street art photo by 
-K. Mitch Hodge"
+              title="Belfast street art photo by K. Mitch Hodge"
             />
           </div>
         </div>
       </div>
-
-      <h3>Day 3</h3>
+      <br />
+      <h2 class="article-subhead">Day 3</h2>
       <br />
       <p>
         Morning: Let guide Billy Scott whisk you around in his black cab to some
