--- a/paris.html
+++ b/paris.html
@@ -75,6 +75,7 @@
     <h1 class="story-headline">Paris on a budget</h1>
 
     <div class="story">
+      <br />
       <p>
         Paris is known for its opulence in old architecture, fine food, classic
         art and high fashion. But a trip to the French capital doesn’t have to
@@ -82,7 +83,7 @@
         Lights.
       </p>
 
-      <h3>Stay at Hôtel Chopin Paris</h3>
+      <h2 class="article-subhead">Stay at Hôtel Chopin Paris</h2>
       <br />
       <p>
         The 19th-century Hôtel Chopin Paris is as charming inside as it is out.
@@ -94,7 +95,7 @@
         the Louvre. Budget rooms start at €77 and family rooms run from €115.
       </p>
 
-      <h3>Go to Disneyland Paris</h3>
+      <h2 class="article-subhead">Go to Disneyland Paris</h2>
       <br />
       <p>
         Disneyland Paris’ two neighbouring theme parks (Disneyland Park and Walt
@@ -107,9 +108,11 @@
       </p>
 
       <div class="container">
-        <div class="row">
-          <div class="col-md-6 mt-5">
-            <h3>Try classic French cuisine at Bouillon Chartier</h3>
+        <div class="row align-items-center">
+          <div class="col-lg-6">
+            <h2 class="article-subhead">
+              Try classic French cuisine at Bouillon Chartier
+            </h2>
             <br />
             <p>
               Dine in a grand 100-year old La Belle Époque restaurant in the
@@ -120,7 +123,7 @@
               Parisian experience.
             </p>
             <br />
-            <h3>Tour historic attractions for free</h3>
+            <h2 class="article-subhead">Tour historic attractions for free</h2>
             <br />
             <p>
               Explore the apartment where French writer Victor Hugo lived and
@@ -132,7 +135,7 @@
               art museum with works by French masters like Cézanne and Monet.
             </p>
           </div>
-          <div class="col-md-6">
+          <div class="col-lg-6">
             <img
               src="/photos/bouillon.jpg"
               class="img-fluid bouillon-photo"
@@ -142,7 +145,8 @@
           </div>
         </div>
       </div>
-      <h3>Eat on the cheap in Le Marais</h3>
+      <br />
+      <h2 class="article-subhead">Eat on the cheap in Le Marais</h2>
       <br />
       <p>
         Take a self-guided food tour through the cobblestone streets of Le
@@ -154,7 +158,7 @@
         handmade Chinese dumplings at L’Art du Ravioli.
       </p>
 
-      <h3>Shop for second-hand vintage items</h3>
+      <h2 class="article-subhead">Shop for second-hand vintage items</h2>
       <br />
       <p>
         Head to the 16th arrondissement for upscale, second-hand shopping. Try
