Fixed h2 heading on Disney page

--- a/disney.html
+++ b/disney.html
@@ -192,7 +192,8 @@
         plants and a chanting tribesman who proclaims his love for disco.
       </p>
 
-      <h2 class="disney-headline">C<h2 class="article-subhead d-inline">ape Cod cookery</h2>
+      <h2 class="disney-headline">C</h2>
+      <h2 class="article-subhead d-inline">ape Cod cookery</h2>
       <br />
       <p>
         Back on dry land, Adventureland fades into the log cabins and Old West
@@ -233,7 +234,8 @@
         Her eyes shine when she talks about Walt; Disney is definitely not just
         for kids.
       </p>
-     <h2 class="disney-headline">K</h2> <h2 class="article-subhead d-inline">ingdom come</h2>
+      <h2 class="disney-headline">K</h2>
+      <h2 class="article-subhead d-inline">ingdom come</h2>
       <br />
       <div class="container">
         <div class="row align-items-center">
@@ -283,7 +285,8 @@
         shape of mouse ears.
       </p>
 
-      <h2 class="disney-headline">E</h2><h2 class="article-subhead d-inline">ars to the ground</h2>
+      <h2 class="disney-headline">E</h2>
+      <h2 class="article-subhead d-inline">ars to the ground</h2>
 
       <p>
         It’s true: the Magic Kingdom has tunnels. To get to them, Claire leads
@@ -304,7 +307,8 @@
         pin-replenishing station and some photo displays of the park’s retired
         attractions.
       </p>
-    <h2 class="disney-headline">Y</h2><h2 class="article-subhead d-inline">outh eternal</h2>
+      <h2 class="disney-headline">Y</h2>
+      <h2 class="article-subhead d-inline">outh eternal</h2>
 
       <p>
         The tour ends back at City Hall. Over the course of five hours we’ve
