--- a/belfast.html
+++ b/belfast.html
@@ -11,6 +11,11 @@
                   from Dublin—Belfast is transforming itself into a must-visit
                   destination."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, Belfast, Northern Ireland, travel, writing"
+    />
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
