--- a/boston.html
+++ b/boston.html
@@ -9,6 +9,10 @@
       name="description"
       content=" One of the oldest cities in the United States, Boston features attractive architecture and many offbeat attractions."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, Boston, Fenway, North End, Cambridge, Downtown"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
