--- a/disney.html
+++ b/disney.html
@@ -9,6 +9,10 @@
       name="description"
       content="This five-hour behind-the-scenes tour of WDW's Magic Kingdom is one of the few things at the amusement park not for kids."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, Walt Disney World, Disney, Magic Kingdom"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
