--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
       name="description"
       content="Mandy Savoie is a Canada-based freelance magazine writer, editor, fact-checker and front-end developer. Check out her website to learn more."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, journalist, writer, front-end web developer, freelance, fact-checker"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
