--- a/paris.html
+++ b/paris.html
@@ -9,6 +9,10 @@
       name="description"
       content="A trip to the French capital doesn’t have to break the bank. Here’s how to do it all on a budget in the City of Lights."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, travel, writing, Paris, France, budget"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
