--- a/randy.html
+++ b/randy.html
@@ -9,7 +9,10 @@
       name="description"
       content="Who’d have thought pierogies could lead to the creation of one of Canada’s greatest anthems?"
     />
-    <link
+    <meta
+      name="keywords"
+      content="Mandy Savoie, music, writing, randy bachman, guess who, bachman-turner-overdrive, taking care of business"
+      <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
