--- a/video.html
+++ b/video.html
@@ -11,6 +11,10 @@
                   scenes, the long days were filled with vomit, blood, and
                   diarrhea."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, music, writing, music videos, MTV, adam and the ants, duran duran, van halen, culture club, the police, prince, billy idol"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
