--- a/work.html
+++ b/work.html
@@ -9,6 +9,10 @@
       name="description"
       content="Check out examples of Mandy Savoie's writing and web development work."
     />
+    <meta
+      name="keywords"
+      content="Mandy Savoie, journalist, writer, front-end web developer, freelance, fact-checker"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
