Updated weather app link

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
             class="carousel-item active img-fluid"
             data-bs-interval="10000000000"
           >
-            <a href="https://sharp-minsky-ace9cf.netlify.app" target="_blank">
+            <a href="https://papaya-selkie-fc7579.netlify.app" target="_blank">
               <img
                 src="/photos/weather.png"
                 class="d-block w-100"
