--- a/work.html
+++ b/work.html
@@ -274,7 +274,7 @@
           <div class="col-md-6">
             <h4 class="card-title">
               <a
-                href="https://sharp-minsky-ace9cf.netlify.app"
+                href="https://papaya-selkie-fc7579.netlify.app"
                 target="_blank"
                 title="New Wave Weather App"
                 class="work-web-link"
@@ -282,7 +282,7 @@
               >
             </h4>
 
-            <h5 class="work-subhead">Built with HTML, CSS and JavaScript.</h5>
+            <h5 class="work-subhead">Built with React.</h5>
             <br />
             <p class="work-web-paragraph">
               Don't be an airhead! Head back to a time of New Coke and catch up
