Added dictionary app to homepage and work page

--- a/index.html
+++ b/index.html
@@ -270,11 +270,15 @@
             /></a>
           </div>
           <div class="carousel-item img-fluid" data-bs-interval="10000000">
-            <img
-              src="/photos/soon.png"
-              class="d-block w-100"
-              alt="Coming soon!"
-            />
+            <a
+              href="https://animated-starship-9ccc00.netlify.app"
+              target="_blank"
+            >
+              <img
+                src="/photos/dictionary.png"
+                class="d-block w-100"
+                alt="Dictionary App"
+            /></a>
           </div>
         </div>
         <button
