--- a/work.html
+++ b/work.html
@@ -326,7 +326,40 @@
                 </p>
 
                 <p>
-                  <button
+              
+                </p>
+              </div>
+              <div class="col-md-6">
+                <img
+                  src="/photos/whale.png"
+                  alt="Atlantic Canada landing page"
+                  class="img-fluid work-pic"
+                />
+              </div>
+               <div class="col-md-6">
+            <img
+              src="/photos/dictionary.png"
+              alt="Dictionary App"
+              class="img-fluid work-pic"
+            />
+          </div>
+          <div class="col-md-6">
+            <h4 class="card-title">
+              <a
+                href="https://animated-starship-9ccc00.netlify.app"
+                target="_blank"
+                title="Dictionary App"
+                class="work-web-link"
+                >Dictionary App</a
+              >
+            </h4>
+
+            <h5 class="work-subhead">Built with React.</h5>
+            <br />
+            <p class="work-web-paragraph">
+              You keep using that word. I do not think it means what you think it means. No worries try my Princess Bride-themed dictionary app!
+            </p>
+    <button
                     class="btn btn-primary web-more-button"
                     id="webLessButton"
                     type="button"
@@ -337,15 +370,6 @@
                   >
                     Less
                   </button>
-                </p>
-              </div>
-              <div class="col-md-6">
-                <img
-                  src="/photos/whale.png"
-                  alt="Atlantic Canada landing page"
-                  class="img-fluid work-pic"
-                />
-              </div>
             </div>
           </div>
         </div>
