--- a/index.html
+++ b/index.html
@@ -109,10 +109,11 @@
                 <i>Leap Magazine</i> and others.
               </p>
               <p>
-                In my spare time, I write short fiction. I’ve been long-listed
-                three times in the Australian Writers’ Centre’s Furious Fiction
+                In my spare time, I write fiction. I’ve been long-listed three
+                times in the Australian Writers’ Centre’s Furious Fiction
                 competition. I was also a finalist in NYC Midnight’s 2021
-                micro-fiction contest. <br />
+                micro-fiction contest and their 2022 short fiction competition.
+                <br />
               </p>
 
               <p>
