--- a/work.html
+++ b/work.html
@@ -265,11 +265,18 @@
       <div class="container">
         <div class="row">
           <div class="col-md-6">
-            <img
-              src="/photos/weather.png"
-              alt="New Wave Weather App"
-              class="img-fluid work-pic"
-            />
+            <a
+              href="https://papaya-selkie-fc7579.netlify.app"
+              target="_blank"
+              title="New Wave Weather App"
+              class="work-web-link"
+            >
+              <img
+                src="/photos/weather.png"
+                alt="New Wave Weather App"
+                class="img-fluid work-pic"
+              />
+            </a>
           </div>
           <div class="col-md-6">
             <h4 class="card-title">
@@ -325,104 +332,120 @@
                   your next dream destination.
                 </p>
 
-                <p>
-              
-                </p>
+                <p></p>
               </div>
               <div class="col-md-6">
-                <img
-                  src="/photos/whale.png"
-                  alt="Atlantic Canada landing page"
-                  class="img-fluid work-pic"
-                />
+                <a
+                  href="https://heroic-fudge-9f13ea.netlify.app"
+                  target="_blank"
+                  title="Atlantic Canada Landing Page"
+                  class="work-web-link"
+                >
+                  <img
+                    src="/photos/whale.png"
+                    alt="Atlantic Canada landing page"
+                    class="img-fluid work-pic"
+                  />
+                </a>
               </div>
-               <div class="col-md-6">
-            <img
-              src="/photos/dictionary.png"
-              alt="Dictionary App"
-              class="img-fluid work-pic"
-            />
-          </div>
-          <div class="col-md-6">
-            <h4 class="card-title">
-              <a
-                href="https://animated-starship-9ccc00.netlify.app"
-                target="_blank"
-                title="Dictionary App"
-                class="work-web-link"
-                >Dictionary App</a
-              >
-            </h4>
-
-            <h5 class="work-subhead">Built with React.</h5>
-            <br />
-            <p class="work-web-paragraph">
-              You keep using that word. I do not think it means what you think it means. No worries try my Princess Bride-themed dictionary app!
-            </p>
-    <button
-                    class="btn btn-primary web-more-button"
-                    id="webLessButton"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseWeb"
-                    aria-expanded="false"
-                    aria-controls="collapseExample"
+              <br />
+              <div class="col-md-6">
+                <a
+                  href="https://animated-starship-9ccc00.netlify.app"
+                  target="_blank"
+                  title="Dictionary App"
+                  class="work-web-link"
+                >
+                  <img
+                    src="/photos/dictionary.png"
+                    alt="Dictionary App"
+                    class="img-fluid work-pic"
+                  />
+                </a>
+              </div>
+              <div class="col-md-6">
+                <h4 class="card-title">
+                  <a
+                    href="https://animated-starship-9ccc00.netlify.app"
+                    target="_blank"
+                    title="Dictionary App"
+                    class="work-web-link"
+                    >Dictionary App</a
                   >
-                    Less
-                  </button>
+                </h4>
+
+                <h5 class="work-subhead">Built with React.</h5>
+                <br />
+                <p class="work-web-paragraph">
+                  You keep using that word. I do not think it means what you
+                  think it means. No worries try my Princess Bride-themed
+                  dictionary app!
+                </p>
+                <button
+                  class="btn btn-primary web-more-button"
+                  id="webLessButton"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#collapseWeb"
+                  aria-expanded="false"
+                  aria-controls="collapseExample"
+                >
+                  Less
+                </button>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="contact" id="contactWork">
-      <h2>Contact Me</h2>
-      <p>
-        Get in touch:
-        <br />
-        <a class="email" href="mailto:mandysavoie@gmail.com"
-          >mandysavoie@gmail.com</a
-        >
-      </p>
+      <div class="contact" id="contactWork">
+        <h2>Contact Me</h2>
+        <p>
+          Get in touch:
+          <br />
+          <a class="email" href="mailto:mandysavoie@gmail.com"
+            >mandysavoie@gmail.com</a
+          >
+        </p>
 
-      <div class="container mt-5">
-        <div class="row">
-          <div class="col-3 contact-icon">
-            <a
-              class="icon"
-              target="_blank"
-              title="Instagram"
-              href="https://www.instagram.com/mansavytravels/"
-            >
-              <i class="fa-brands fa-instagram-square fa-2x"></i>
-            </a>
-          </div>
-          <div class="col-3 contact-icon">
-            <a
-              class="icon"
-              target="_blank"
-              title="Twitter"
-              href="https://twitter.com/mandysavoie"
-              ><i class="fa-brands fa-twitter-square fa-2x"></i
-            ></a>
-          </div>
-          <div class="col-3 contact-icon">
-            <a
-              class="icon"
-              target="_blank"
-              title="LinkedIn"
-              href="https://www.linkedin.com/in/mansavy/"
-              ><i class="fa-brands fa-linkedin fa-2x"></i
-            ></a>
-          </div>
-          <div class="col-3 contact-icon">
-            <a
-              class="icon"
-              title="GitHub"
-              target="_blank"
-              href="https://github.com/mansavy"
-              ><i class="fa-brands fa-github-square fa-2x"></i
-            ></a>
+        <div class="container mt-5">
+          <div class="row">
+            <div class="col-3 contact-icon">
+              <a
+                class="icon"
+                target="_blank"
+                title="Instagram"
+                href="https://www.instagram.com/mansavytravels/"
+              >
+                <i class="fa-brands fa-instagram-square fa-2x"></i>
+              </a>
+            </div>
+            <div class="col-3 contact-icon">
+              <a
+                class="icon"
+                target="_blank"
+                title="Twitter"
+                href="https://twitter.com/mandysavoie"
+                ><i class="fa-brands fa-twitter-square fa-2x"></i
+              ></a>
+            </div>
+            <div class="col-3 contact-icon">
+              <a
+                class="icon"
+                target="_blank"
+                title="LinkedIn"
+                href="https://www.linkedin.com/in/mansavy/"
+                ><i class="fa-brands fa-linkedin fa-2x"></i
+              ></a>
+            </div>
+            <div class="col-3 contact-icon">
+              <a
+                class="icon"
+                title="GitHub"
+                target="_blank"
+                href="https://github.com/mansavy"
+                ><i class="fa-brands fa-github-square fa-2x"></i
+              ></a>
+            </div>
           </div>
         </div>
       </div>
