--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,200;0,700;1,200&family=Permanent+Marker&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon.ico" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="navbar">
