Adjusted carousel image height

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
               <p>
                 In my spare time, I write fiction. I’ve been long-listed three
                 times in the Australian Writers’ Centre’s Furious Fiction
-                competition. I was also a finalist in NYC Midnight’s 2021
-                micro-fiction contest and their 2022 short fiction competition.
+                competition. And I've received honourable mentions in their 2022
+                short fiction and 2022 micro-fiction competitions.
                 <br />
               </p>
 
@@ -261,6 +261,7 @@
                 src="/photos/weather.png"
                 class="d-block w-100"
                 alt="New Wave Weather App"
+                height="390px"
             /></a>
           </div>
           <div class="carousel-item img-fluid" data-bs-interval="100000000">
@@ -269,6 +270,7 @@
                 src="/photos/whale.png"
                 class="d-block w-100"
                 alt="Atlantic Canada Landing Page"
+                height="390px"
             /></a>
           </div>
           <div class="carousel-item img-fluid" data-bs-interval="10000000">
@@ -280,6 +282,7 @@
                 src="/photos/dictionary.png"
                 class="d-block w-100"
                 alt="Dictionary App"
+                height="390px"
             /></a>
           </div>
         </div>
