Updated work content

--- a/index.html
+++ b/index.html
@@ -265,11 +265,14 @@
             /></a>
           </div>
           <div class="carousel-item img-fluid" data-bs-interval="100000000">
-            <a href="https://heroic-fudge-9f13ea.netlify.app" target="_blank">
+            <a
+              href="https://astounding-pasca-89eabd.netlify.app"
+              target="_blank"
+            >
               <img
-                src="/photos/whale.png"
+                src="/photos/moncton.png"
                 class="d-block w-100"
-                alt="Atlantic Canada Landing Page"
+                alt="Tourism Landing Page"
                 height="390px"
             /></a>
           </div>
