--- a/work.html
+++ b/work.html
@@ -316,11 +316,11 @@
                 <br />
                 <h4 class="card-title">
                   <a
-                    href="https://heroic-fudge-9f13ea.netlify.app"
+                    href="https://astounding-pasca-89eabd.netlify.app"
                     target="_blank"
-                    title="Atlantic Canada Landing Page"
+                    title="Tourism Landing Page"
                     class="work-web-link"
-                    >Atlantic Canada Landing Page</a
+                    >Tourism Landing Page</a
                   >
                 </h4>
                 <h5 class="work-subhead">
@@ -328,22 +328,22 @@
                 </h5>
                 <br />
                 <p class="work-web-paragraph">
-                  Discover which of the four Atlantic provinces in Canada is
-                  your next dream destination.
+                  Discover what Moncton, New Brunswick has to offer on this
+                  billingual landing page.
                 </p>
 
                 <p></p>
               </div>
               <div class="col-md-6">
                 <a
-                  href="https://heroic-fudge-9f13ea.netlify.app"
+                  href="https://astounding-pasca-89eabd.netlify.app"
                   target="_blank"
-                  title="Atlantic Canada Landing Page"
+                  title="Tourism Landing Page"
                   class="work-web-link"
                 >
                   <img
-                    src="/photos/whale.png"
-                    alt="Atlantic Canada landing page"
+                    src="/photos/moncton.png"
+                    alt="Tourism landing page"
                     class="img-fluid work-pic"
                   />
                 </a>
