--- a/index.html
+++ b/index.html
@@ -250,6 +250,12 @@
             data-bs-slide-to="2"
             aria-label="Slide 3"
           ></button>
+          <button
+            type="button"
+            data-bs-target="#carouselExampleDark"
+            data-bs-slide-to="3"
+            aria-label="Slide 4"
+          ></button>
         </div>
         <div class="carousel-inner">
           <div
@@ -285,6 +291,19 @@
                 src="/photos/dictionary.png"
                 class="d-block w-100"
                 alt="Dictionary App"
+                height="390px"
+            /></a>
+          </div>
+
+          <div class="carousel-item img-fluid" data-bs-interval="100000000">
+            <a
+              href="https://canoecanteen.000webhostapp.com/index.php"
+              target="_blank"
+            >
+              <img
+                src="/photos/canoe.png"
+                class="d-block w-100"
+                alt="Canoe booking page"
                 height="390px"
             /></a>
           </div>
