--- a/work.html
+++ b/work.html
@@ -378,9 +378,30 @@
                 <br />
                 <p class="work-web-paragraph">
                   You keep using that word. I do not think it means what you
-                  think it means. No worries try my Princess Bride-themed
-                  dictionary app!
+                  think it means. No worries, try my
+                  <i>Princess Bride</i>-themed dictionary app!
                 </p>
+              </div>
+              <div class="col-md-6">
+                <br />
+                <h4 class="card-title">
+                  <a
+                    href="https://canoecanteen.000webhostapp.com/index.php"
+                    target="_blank"
+                    title="Canoe booking page"
+                    class="work-web-link"
+                    >Canoe Booking Page</a
+                  >
+                </h4>
+                <h5 class="work-subhead">
+                  Built with HTML, CSS, JavaScript and PHP.
+                </h5>
+                <br />
+                <p class="work-web-paragraph">
+                  Canoe imagine what fun you'll have paddling around Nova
+                  Scotia? Check out this booking website.
+                </p>
+
                 <button
                   class="btn btn-primary web-more-button"
                   id="webLessButton"
@@ -393,6 +414,21 @@
                   Less
                 </button>
               </div>
+              <div class="col-md-6">
+                <a
+                  href="https://canoecanteen.000webhostapp.com/index.php"
+                  target="_blank"
+                  title="Canoe booking page"
+                  class="work-web-link"
+                >
+                  <img
+                    src="/photos/canoe.png"
+                    alt="Canoe booking page"
+                    class="img-fluid work-pic"
+                  />
+                </a>
+              </div>
+              <br />
             </div>
           </div>
         </div>
