Updated about me section

--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
               <p>
                 In my spare time, I write fiction. I’ve been long-listed three
                 times in the Australian Writers’ Centre’s Furious Fiction
-                competition. And I've received honourable mentions in their 2022
-                short fiction and 2022 micro-fiction competitions.
+                competition. And I've received honourable mentions in NYC
+                Midnight's 2022 short fiction and 2022 micro-fiction
+                competitions.
                 <br />
               </p>
 
